@@ -13,6 +13,7 @@
 #include <stdio.h>
 #include <signal.h>
 #include <sys/wait.h>
+#include <kprocess.h>
 #include "manager.h"
 
 #include "minicli.moc"
@@ -24,29 +25,18 @@ extern bool do_not_draw;
 QList <char> *history = NULL;
 QListIterator <char> *it;
 
-static void catch_child(int){
-  int status;
-  wait(&status);
-  signal(SIGCHLD, catch_child);
-}
-
 void execute(const char* cmd){
-  static char* shell = NULL;
+  char* shell = NULL;
   if (!shell){
     if (getenv("SHELL"))
       shell = qstrdup(getenv("SHELL"));
     else
-      shell = "/bin/sh"; 
+      shell = "/bin/sh";
   }
-  signal(SIGCHLD, catch_child);
-  if (!(fork())){ // child
-    freopen("/dev/null", "r", stdin);
-    freopen("/dev/null", "w", stdout);
-    freopen("/dev/null", "w", stderr);
-    setsid();
-    execl(shell, shell, "-c", cmd, NULL);
-    exit(1);
-  }
+  KProcess proc;
+  proc.setExecutable(shell);
+  proc << "-c" << cmd;
+  proc.start(KProcess::DontCare);
 }
 
 
